--- a/app/res/values-lt/strings.xml
+++ b/app/res/values-lt/strings.xml
@@ -76,4 +76,6 @@
     <string name="change_settings">Change Settings</string>
     <string name="connect_message_you">Voi</string>
     <string name="connect_message_them">Loro</string>
+    <string name="connect_fetch_learning_progress_error">Nepavyko gauti mokymosi eigos</string>
+    <string name="connect_fetch_delivery_progress_error">Nepavyko gauti pristatymo eigos</string>
 </resources>
