Handled failed job claim

--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -122,6 +122,7 @@
     <string name="recovery_network_outdated">La aplicación está desactualizada y ya no puede comunicarse con el servidor. Actualízala en Google Play Store.</string>
     <string name="recovery_app_manager">Ir al administrador de aplicaciones</string>
     <string name="recovery_retry">Reintentar recuperación</string>
+    <string name="recovery_unable_to_claim_opportunity">No se puede reclamar la oportunidad, comunícate con un administrador.</string>
     <string name="notification_channel_errors_title">Errores</string>
     <string name="notification_channel_errors_description">Notificaciones para mensajes de error cuando algo sucede, por ejemplo, al instalar una aplicación de CommCare o al sincronizar formularios con el servidor</string>
     <string name="notification_channel_user_session_title">Sesión de usuario</string>
