--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -181,6 +181,7 @@
     <string name="recovery_forms_send_error">Erro ao enviar formulários</string>
     <string name="recovery_forms_state_unavailable">Os formulários não estão disponíveis. Verifique se o armazenamento do seu telefone está disponível</string>
     <string name="recovery_network_unavailable">Sem conexão de rede. Verifique sua internet e tente novamente.</string>
+    <string name="recovery_unable_to_claim_opportunity">Não é possível reivindicar a oportunidade, entre em contato com um administrador.</string>
     <string name="recovery_network_outdated">O aplicativo está desatualizado e não consegue mais se comunicar com o servidor. Atualize o aplicativo na Google Play Store.</string>
     <string name="recovery_app_manager">Vá para o Gerenciador de aplicativos</string>
     <string name="recovery_retry">Tentar novamente a recuperação</string>
