--- a/app/res/values-sw/strings.xml
+++ b/app/res/values-sw/strings.xml
@@ -182,6 +182,7 @@
     <string name="recovery_forms_send_error">Hitilafu wakati wa kutuma fomu</string>
     <string name="recovery_forms_state_unavailable">Fomu hazipatikani. Hakikisha hifadhi ya simu yako inapatikana</string>
     <string name="recovery_network_unavailable">Hakuna muunganisho wa mtandao. Tafadhali angalia intaneti yako na ujaribu tena.</string>
+    <string name="recovery_unable_to_claim_opportunity">Imeshindwa kudai fursa, tafadhali wasiliana na msimamizi.</string>
     <string name="recovery_network_outdated">Programu imepitwa na wakati na haiwezi tena kuwasiliana na seva. Tafadhali sasisha programu kwenye Google Play Store.</string>
     <string name="recovery_app_manager">Nenda kwa Kidhibiti Programu</string>
     <string name="recovery_retry">Jaribu Urejeshaji tena</string>
