--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -230,6 +230,7 @@
     <string name="recovery_network_server_error">There was an error processing your request.</string>
     <string name="recovery_network_cooldown">Too many request attempts, try again after an hour.</string>
     <string name="recovery_network_unknown">Something went wrong, please try again.</string>
+    <string name="recovery_unable_to_claim_opportunity">Unable to claim the opportunity, please contact an administrator.</string>
     <string name="recovery_app_manager">Go to App Manager</string>
     <string name="recovery_retry">Retry Recovery</string>
     <string name="notification_channel_errors_title">Errors</string>
