Handled empty text in both tab's changed cloud icon to white

--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -486,6 +486,7 @@
     <string name="personalid_credential_level_6_month_active">6 Meses de\nActividad</string>
     <string name="personalid_credential_level_9_month_active">9 Meses de\nActividad</string>
     <string name="personalid_credential_level_12_month_active">12 Meses de\nActividad</string>
+    <string name="personalid_credential_no_pending_credential">No hay credenciales pendientes</string>
 
     <string name="nav_drawer_signin_register">Iniciar sesión / Registrarse</string>
     <string name="nav_drawer_help">Ayuda</string>
