--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -479,6 +479,8 @@
     <string name="personalid_credential_level_6_month_active">6 ኣዋርሕ\nተግባር</string>
     <string name="personalid_credential_level_9_month_active">9 ኣዋርሕ\nተግባር</string>
     <string name="personalid_credential_level_12_month_active">12 ኣዋርሕ\nተግባር</string>
+    <string name="personalid_credential_no_pending_credential">ዝኾነ ኣብ መስርሕ ዘሎ ምስክር ወረቐት የለን</string>
+
     <string name="nav_drawer_signin_register">እቶም ኣእትዉ / ይመዝገቡ</string>
     <string name="nav_drawer_help">እርዳታ</string>
     <string name="nav_drawer_not_signed_in_to_personal_id">ናይ ናፍቆት መለለዪ ኣብዚ ኣይተመዝገብካን</string>
