--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -675,6 +675,7 @@
     <string name="personalid_credential_level_6_month_active">6 Months of\nActivity</string>
     <string name="personalid_credential_level_9_month_active">9 Months of\nActivity</string>
     <string name="personalid_credential_level_12_month_active">12 Months of\nActivity</string>
+    <string name="personalid_credential_no_pending_credential">There are no pending credentials</string>
 
     <string name="play_service_update_error">Please make sure Google Play services is supported on the device and is up to date.</string>
     <string name="nav_drawer_open">Open navigation drawer</string>
