--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -495,6 +495,8 @@
     <string name="personalid_credential_level_9_month_active">9 Meses de\nAtividade</string>
     <string name="personalid_credential_level_12_month_active">12 Meses de\nAtividade</string>
 
+    <string name="personalid_notification">Notificações</string>
+
     <string name="nav_drawer_signin_register">Entrar / Registrar-se</string>
     <string name="nav_drawer_help">Ajuda</string>
     <string name="nav_drawer_not_signed_in_to_personal_id">Você não está conectado ao ID Pessoal</string>
